--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mantine/core": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
+    "@tanstack/react-query": "^5.66.9",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -25,12 +26,13 @@
     "@faker-js/faker": "^9.5.0",
     "@storybook/addon-essentials": "^8.6.0",
     "@storybook/addon-interactions": "^8.6.0",
-    "@storybook/addon-onboarding": "^8.6.0",
     "@storybook/blocks": "^8.6.0",
     "@storybook/nextjs": "^8.6.0",
     "@storybook/preview-api": "^8.6.0",
     "@storybook/react": "^8.6.0",
     "@storybook/test": "^8.6.0",
+    "@tanstack/eslint-plugin-query": "^5.66.1",
+    "@tanstack/react-query-devtools": "^5.66.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -44,12 +46,14 @@
     "prettier": "3.5.2",
     "storybook": "^8.6.0",
     "storybook-dark-mode": "^4.0.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.98.0"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
   "eslintConfig": {
     "extends": [
-      "plugin:storybook/recommended"
+      "plugin:storybook/recommended",
+      "plugin:@tanstack/query/recommended"
     ]
   }
 }
