--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/preview-api": "^8.6.0",
     "@storybook/react": "^8.6.0",
     "@storybook/test": "^8.6.0",
+    "@storybook/theming": "^8.6.2",
     "@tanstack/eslint-plugin-query": "^5.66.1",
     "@tanstack/react-query-devtools": "^5.66.9",
     "@types/node": "^20",
