--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "eslint-config-next": "15.1.7",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-storybook": "^0.11.3",
+    "msw": "^2.7.3",
+    "msw-storybook-addon": "^2.0.4",
     "playwright": "^1.50.1",
     "postcss": "^8.5.3",
     "postcss-preset-mantine": "^1.17.0",
@@ -59,6 +61,11 @@
     "extends": [
       "plugin:@tanstack/query/recommended",
       "plugin:storybook/recommended"
+    ]
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
     ]
   }
 }
