feat: update ESLint configuration and add new plugins; modify DataTable hook to streamline response handling

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "esbenp.prettier-vscode",
     "vunguyentuan.vscode-postcss",
-    "vunguyentuan.vscode-css-variables"
+    "vunguyentuan.vscode-css-variables",
+    "dbaeumer.vscode-eslint"
   ]
 }
