--- a/package.json
+++ b/package.json
@@ -22,39 +22,47 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
+    "@chromatic-com/storybook": "^3.2.5",
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^9.5.0",
-    "@storybook/addon-essentials": "^8.6.0",
-    "@storybook/addon-interactions": "^8.6.0",
-    "@storybook/blocks": "^8.6.0",
-    "@storybook/nextjs": "^8.6.0",
-    "@storybook/preview-api": "^8.6.0",
-    "@storybook/react": "^8.6.0",
-    "@storybook/test": "^8.6.0",
+    "@next/eslint-plugin-next": "^15.2.0",
+    "@storybook/addon-essentials": "^8.6.2",
+    "@storybook/addon-interactions": "^8.6.2",
+    "@storybook/addon-onboarding": "^8.6.2",
+    "@storybook/blocks": "^8.6.2",
+    "@storybook/experimental-addon-test": "^8.6.2",
+    "@storybook/experimental-nextjs-vite": "8.6.2",
+    "@storybook/nextjs": "^8.6.2",
+    "@storybook/react": "^8.6.2",
+    "@storybook/test": "^8.6.2",
     "@tanstack/eslint-plugin-query": "^5.66.1",
     "@tanstack/react-query-devtools": "^5.66.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@vitest/browser": "^3.0.7",
+    "@vitest/coverage-v8": "^3.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^0.11.3",
+    "msw": "^2.7.3",
+    "msw-storybook-addon": "^2.0.4",
+    "playwright": "^1.50.1",
     "postcss": "^8.5.3",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "3.5.2",
-    "storybook": "^8.6.0",
-    "storybook-dark-mode": "^4.0.2",
+    "storybook": "^8.6.2",
     "typescript": "^5",
-    "webpack": "^5.98.0"
+    "vitest": "^3.0.7"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended",
-      "plugin:@tanstack/query/recommended"
+  "msw": {
+    "workerDirectory": [
+      "public"
     ]
   }
 }
