--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     "build:storybook": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "^7.17.1",
-    "@mantine/hooks": "^7.17.1",
-    "@mantine/modals": "^7.17.1",
-    "@mantine/notifications": "^7.17.1",
-    "@tabler/icons-react": "^3.30.0",
-    "@tanstack/react-query": "^5.66.9",
-    "@tanstack/react-table": "^8.21.2",
-    "next": "15.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "zod": "^3.24.2"
+    "@mantine/core": "^8.0.2",
+    "@mantine/hooks": "^8.0.2",
+    "@mantine/modals": "^8.0.2",
+    "@mantine/notifications": "^8.0.2",
+    "@tanstack/react-query": "^5.77.2",
+    "@tanstack/react-table": "^8.21.3",
+    "next": "15.3.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^9.5.0",
-    "@next/eslint-plugin-next": "^15.2.0",
+    "@next/eslint-plugin-next": "15.3.2",
     "@storybook/addon-essentials": "^8.6.2",
     "@storybook/addon-interactions": "^8.6.2",
     "@storybook/addon-onboarding": "^8.6.2",
@@ -39,17 +39,17 @@
     "@storybook/nextjs": "^8.6.2",
     "@storybook/react": "^8.6.2",
     "@storybook/test": "^8.6.2",
-    "@tanstack/eslint-plugin-query": "^5.66.1",
-    "@tanstack/react-query-devtools": "^5.66.9",
+    "@tanstack/eslint-plugin-query": "^5.78.0",
+    "@tanstack/react-query-devtools": "^5.77.2",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^0.11.3",
@@ -69,5 +69,17 @@
     "workerDirectory": [
       "public"
     ]
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "core-js-pure",
+      "esbuild",
+      "msw",
+      "sharp"
+    ],
+    "overrides": {
+      "@types/react": "19.1.6",
+      "@types/react-dom": "19.1.5"
+    }
   }
 }
