--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,9 +12,11 @@
   "eslint.useFlatConfig": true,
 
   "editor.formatOnSave": true,
+
   "editor.codeActionsOnSave": {
     "source.organizeImports": "always",
-    "source.fixAll.ts": "always"
+    "source.fixAll.ts": "always",
+    "source.fixAll.eslint": "always"
   },
 
   "editor.defaultFormatter": "esbenp.prettier-vscode"
