--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@mantine/core": "^8.0.2",
+    "@mantine/dates": "^8.0.2",
     "@mantine/hooks": "^8.0.2",
     "@mantine/modals": "^8.0.2",
     "@mantine/notifications": "^8.0.2",
     "@tanstack/react-query": "^5.80.2",
     "@tanstack/react-table": "^8.21.3",
+    "dayjs": "^1.11.13",
     "next": "15.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
