--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-imask": "^7.6.1",
     "zod": "^3.25.32"
   },
   "devDependencies": {
