--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,11 +13,11 @@
 
   "editor.formatOnSave": true,
 
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+
   "editor.codeActionsOnSave": {
     "source.organizeImports": "always",
     "source.fixAll.ts": "always",
     "source.fixAll.eslint": "always"
-  },
-
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
