feat: add cleanup script for removing Storybook dependencies and configurations

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "dotenv -e .env.production -- next build",
     "start": "dotenv -e .env.production -- next start",
     "lint": "next lint",
-    "format": "prettier --write .",
     "storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build"
+    "build:storybook": "storybook build",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@mantine/core": "^8.2.1",
