--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "next": "15.5.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "zod": "^3.25.76"
   },
@@ -66,22 +65,5 @@
     "typescript": "^5",
     "vitest": "^3.0.7"
   },
-  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "core-js-pure",
-      "esbuild",
-      "msw",
-      "sharp"
-    ],
-    "overrides": {
-      "@types/react": "19.1.10",
-      "@types/react-dom": "19.1.7"
-    }
-  }
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
