feat: update environment configuration and Docker setup for improved containerization

--- a/.env.development.example
+++ b/.env.development.example
@@ -1,5 +1,5 @@
-# This is the port where the app will run.
-PORT=3000
+# Docker container port
+HOST_PORT=3000
 
 # Set the API URL here. 
 # This is used in the client side to make requests to the server.
